Changement de la top bar : Search placeholder

--- a/index.html
+++ b/index.html
@@ -16,21 +16,13 @@
     <span data-responsive-toggle="responsive-menu" data-hide-for="medium">
       <button class="menu-icon dark" type="button" data-toggle></button>
     </span>
-    <strong>Site Title</strong>
+    <strong>CodeName</strong>
   </div>
   <div id="responsive-menu">
     <div class="top-bar-left">
-      <ul class="dropdown menu" data-dropdown-menu>
-        <li>
-          <a href="#">One</a>
-          <ul class="menu vertical">
-            <li><a href="#">One</a></li>
-            <li><a href="#">Two</a></li>
-            <li><a href="#">Three</a></li>
-          </ul>
-        </li>
-        <li><a href="#">Two</a></li>
-        <li><a href="#">Three</a></li>
+      <ul class="menu">
+        <li><input type="search" placeholder="Search"></li>
+        <li><button type="button" class="button">Search</button></li>
       </ul>
     </div>
     <div class="top-bar-right">
@@ -49,6 +41,18 @@
     </div>
   </div>
 </div>
+<ul class="dropdown menu" data-dropdown-menu>
+  <li>
+    <a href="#">One</a>
+    <ul class="menu vertical">
+      <li><a href="#">One</a></li>
+      <li><a href="#">Two</a></li>
+      <li><a href="#">Three</a></li>
+    </ul>
+  </li>
+  <li><a href="#">Two</a></li>
+  <li><a href="#">Three</a></li>
+</ul>
 <!-- ////////////////////////////////////////////-->
 <!-- END HEADER-->
 <!-- ////////////////////////////////////////////-->
