--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <div class="top-bar-right">
       <ul class="menu">
-        <li><button type="button" class="button"><a data-open="exampleModal1">Login</a></button></li>
+        <li><a id="buttonlight" class="button" data-open="exampleModal1">Login</a></li>
         <div class="reveal" id="exampleModal1" data-reveal>
           <h1>Awesome. I Have It.</h1>
           <p class="lead">Your couch. It is mine.</p>
@@ -36,23 +36,34 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <li><button type="button" class="button">Signup</button></li>
+        <li><a class="button warning" data-open="exampleModal2">Signin</a></li>
+        <div class="reveal" id="exampleModal2" data-reveal>
+          <h1>Awesome. I Have It.</h1>
+          <p class="lead">Your couch. It is mine.</p>
+          <p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
+          <button class="close-button" data-close aria-label="Close modal" type="button">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
       </ul>
     </div>
   </div>
 </div>
-<ul class="dropdown menu" data-dropdown-menu>
-  <li>
-    <a href="#">One</a>
-    <ul class="menu vertical">
-      <li><a href="#">One</a></li>
-      <li><a href="#">Two</a></li>
-      <li><a href="#">Three</a></li>
-    </ul>
-  </li>
-  <li><a href="#">Two</a></li>
-  <li><a href="#">Three</a></li>
-</ul>
+<nav class="top-bar" id="NavBar">
+  <ul class="dropdown menu" data-dropdown-menu>
+    <li>
+      <a href="#">One</a>
+      <ul class="menu vertical">
+        <li><a href="#">One</a></li>
+        <li><a href="#">Two</a></li>
+        <li><a href="#">Three</a></li>
+      </ul>
+    </li>
+    <li><a href="#">Two</a></li>
+    <li><a href="#">Three</a></li>
+  </ul>
+</nav>
+
 <!-- ////////////////////////////////////////////-->
 <!-- END HEADER-->
 <!-- ////////////////////////////////////////////-->
