couleurs et setup TopBar et Navbar

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <li><a class="button warning" data-open="exampleModal2">Signin</a></li>
+        <li><a class="button" data-open="exampleModal2">Signin</a></li>
         <div class="reveal" id="exampleModal2" data-reveal>
           <h1>Awesome. I Have It.</h1>
           <p class="lead">Your couch. It is mine.</p>
@@ -49,19 +49,21 @@
     </div>
   </div>
 </div>
-<nav class="top-bar" id="NavBar">
-  <ul class="dropdown menu" data-dropdown-menu>
-    <li>
-      <a href="#">One</a>
-      <ul class="menu vertical">
-        <li><a href="#">One</a></li>
-        <li><a href="#">Two</a></li>
-        <li><a href="#">Three</a></li>
-      </ul>
-    </li>
-    <li><a href="#">Two</a></li>
-    <li><a href="#">Three</a></li>
-  </ul>
+<nav class="topBarColor topBarNav top-bar">
+  <div class="row">
+    <ul class="topBarColor dropdown menu" data-dropdown-menu>
+      <li>
+        <a href="#">One</a>
+        <ul class="topBarColor menu vertical">
+          <li><a href="#">One</a></li>
+          <li><a href="#">Two</a></li>
+          <li><a href="#">Three</a></li>
+        </ul>
+      </li>
+      <li><a href="#">Two</a></li>
+      <li><a href="#">Three</a></li>
+    </ul>
+  </div>
 </nav>
 
 <!-- ////////////////////////////////////////////-->
