--- a/index.html
+++ b/index.html
@@ -12,57 +12,68 @@
 <!-- HEADER-->
 <!-- ////////////////////////////////////////////-->
 <div class="top-bar">
-  <div class="top-bar-title">
-    <span data-responsive-toggle="responsive-menu" data-hide-for="medium">
-      <button class="menu-icon dark" type="button" data-toggle></button>
-    </span>
-    <strong>CodeName</strong>
-  </div>
-  <div id="responsive-menu">
-    <div class="top-bar-left">
-      <ul class="menu">
-        <li><input type="search" placeholder="Search"></li>
-        <li><button type="button" class="button">Search</button></li>
-      </ul>
+  <div class="row">
+    <div class="top-bar-title">
+      <span data-responsive-toggle="responsive-menu" data-hide-for="medium">
+        <button class="menu-icon dark" type="button" data-toggle></button>
+      </span>
+      <strong>CodeName</strong>
     </div>
-    <div class="top-bar-right">
-      <ul class="menu">
-        <li><a id="buttonlight" class="button" data-open="exampleModal1">Login</a></li>
-        <div class="reveal" id="exampleModal1" data-reveal>
-          <h1>Awesome. I Have It.</h1>
-          <p class="lead">Your couch. It is mine.</p>
-          <p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
-          <button class="close-button" data-close aria-label="Close modal" type="button">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <li><a class="button" data-open="exampleModal2">Signin</a></li>
-        <div class="reveal" id="exampleModal2" data-reveal>
-          <h1>Awesome. I Have It.</h1>
-          <p class="lead">Your couch. It is mine.</p>
-          <p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
-          <button class="close-button" data-close aria-label="Close modal" type="button">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-      </ul>
+    <div id="responsive-menu">
+      <div class="top-bar-left">
+        <ul class="menu">
+          <li>
+            <div class="input-group searchbar">
+              <input class="input-group-field" type="search">
+              <div class="input-group-button">
+                <button type="submit" class="button"><i class="fa fa-search" aria-hidden="true"></i></button>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div class="top-bar-right">
+        <ul class="menu">
+          <li><a id="buttonlight" class="button" data-open="exampleModal1">Login</a></li>
+          <div class="reveal" id="exampleModal1" data-reveal>
+            <h1>Awesome. I Have It.</h1>
+            <p class="lead">Your couch. It is mine.</p>
+            <p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
+            <button class="close-button" data-close aria-label="Close modal" type="button">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <li><a class="button" data-open="exampleModal2">Signin</a></li>
+          <div class="reveal" id="exampleModal2" data-reveal>
+            <h1>Awesome. I Have It.</h1>
+            <p class="lead">Your couch. It is mine.</p>
+            <p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
+            <button class="close-button" data-close aria-label="Close modal" type="button">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+        </ul>
+      </div>
     </div>
   </div>
+
 </div>
 <nav class="topBarColor topBarNav top-bar">
   <div class="row">
-    <ul class="topBarColor dropdown menu" data-dropdown-menu>
-      <li>
-        <a href="#">One</a>
-        <ul class="topBarColor menu vertical">
-          <li><a href="#">One</a></li>
-          <li><a href="#">Two</a></li>
-          <li><a href="#">Three</a></li>
-        </ul>
-      </li>
-      <li><a href="#">Two</a></li>
-      <li><a href="#">Three</a></li>
-    </ul>
+    <div class="small-4 small-centered column">
+      <ul class="topBarColor dropdown menu" data-dropdown-menu>
+        <li>
+          <a href="#">One</a>
+          <ul class="topBarColor menu vertical">
+            <li><a href="#">One</a></li>
+            <li><a href="#">Two</a></li>
+            <li><a href="#">Three</a></li>
+          </ul>
+        </li>
+        <li><a href="#">Two</a></li>
+        <li><a href="#">Three</a></li>
+      </ul>
+    </div>
   </div>
 </nav>
 
