--- a/index.html
+++ b/index.html
@@ -13,65 +13,93 @@
 <!-- ////////////////////////////////////////////-->
 <div class="top-bar">
   <div class="row">
-    <div class="top-bar-title">
-      <span data-responsive-toggle="responsive-menu" data-hide-for="medium">
-        <button class="menu-icon dark" type="button" data-toggle></button>
-      </span>
-      <strong>CodeName</strong>
-    </div>
-    <div id="responsive-menu">
-      <div class="top-bar-left">
-        <ul class="menu">
-          <li>
-            <div class="input-group searchbar">
-              <input class="input-group-field" type="search">
-              <div class="input-group-button">
-                <button type="submit" class="button"><i class="fa fa-search" aria-hidden="true"></i></button>
-              </div>
-            </div>
-          </li>
-        </ul>
+    <div class="small-12 small-centered column">
+      <div class="top-bar-title">
+        <span data-responsive-toggle="responsive-menu" data-hide-for="medium">
+          <button class="menu-icon dark" type="button" data-toggle></button>
+        </span>
+        <strong>CodeName</strong>
       </div>
-      <div class="top-bar-right">
-        <ul class="menu">
-          <li><a id="buttonlight" class="button" data-open="exampleModal1">Login</a></li>
-          <div class="reveal" id="exampleModal1" data-reveal>
-            <h1>Awesome. I Have It.</h1>
-            <p class="lead">Your couch. It is mine.</p>
-            <p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
-            <button class="close-button" data-close aria-label="Close modal" type="button">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <li><a class="button" data-open="exampleModal2">Signin</a></li>
-          <div class="reveal" id="exampleModal2" data-reveal>
-            <h1>Awesome. I Have It.</h1>
-            <p class="lead">Your couch. It is mine.</p>
-            <p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
-            <button class="close-button" data-close aria-label="Close modal" type="button">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-        </ul>
+      <div id="responsive-menu">
+        <div class="top-bar-left">
+          <ul class="menu">
+            <li>
+              <label>
+                <select>
+                  <option value="husker">GMT</option>
+                  <option value="starbuck">Starbuck</option>
+                  <option value="hotdog">Hot Dog</option>
+                  <option value="apollo">Apollo</option>
+                </select>
+              </label>
+            </li>
+            <li>
+              <span>local time</span>
+            </li>
+          </ul>
+
+        </div>
+        <div class="top-bar-right">
+          <ul class="menu">
+            <li><a class="logSign" data-open="exampleModal1">Login</a></li>
+            <div class="reveal" id="exampleModal1" data-reveal>
+              <h1>Awesome. I Have It.</h1>
+              <p class="lead">Your couch. It is mine.</p>
+              <p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
+              <button class="close-button" data-close aria-label="Close modal" type="button">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <li><a class="logSign" data-open="exampleModal2">Signin</a></li>
+            <div class="reveal" id="exampleModal2" data-reveal>
+              <h1>Awesome. I Have It.</h1>
+              <p class="lead">Your couch. It is mine.</p>
+              <p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
+              <button class="close-button" data-close aria-label="Close modal" type="button">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
 
 </div>
-<nav class="topBarColor topBarNav top-bar">
+<nav class="navBar top-bar">
   <div class="row">
-    <div class="small-4 small-centered column">
-      <ul class="topBarColor dropdown menu" data-dropdown-menu>
-        <li>
-          <a href="#">One</a>
-          <ul class="topBarColor menu vertical">
-            <li><a href="#">One</a></li>
-            <li><a href="#">Two</a></li>
-            <li><a href="#">Three</a></li>
-          </ul>
-        </li>
-        <li><a href="#">Two</a></li>
-        <li><a href="#">Three</a></li>
+    <div class="small-12 columns">
+      <ul class="menu">
+        <div class="small-2 columns">
+          <li class="active">
+            <a href="#"><p><i class="fa fa-bug" aria-hidden="true"></i></p>Home</a>
+          </li>
+        </div>
+        <div class="small-2 columns">
+          <li>
+            <a href="#"><p><i class="fa fa-fire-extinguisher" aria-hidden="true"></i></p>Games</a>
+          </li>
+        </div>
+        <div class="small-2 columns">
+          <li>
+            <a href="#"><p><i class="fa fa-glass" aria-hidden="true"></i></p>Competitions</a>
+          </li>
+        </div>
+        <div class="small-2 columns">
+          <li>
+            <a href="#"><p><i class="fa fa-tags" aria-hidden="true"></i></p>Streams</a>
+          </li>
+        </div>
+        <div class="small-2 columns">
+          <li>
+            <a href="#"><p><i class="fa fa-user-secret" aria-hidden="true"></i></p>Bets</a>
+          </li>
+        </div>
+        <div class="small-2 columns">
+          <li>
+            <a href="#"><p><i class="fa fa-android" aria-hidden="true"></i></p>Community</a>
+          </li>
+        </div>
       </ul>
     </div>
   </div>
