ajout footer simple

--- a/index.html
+++ b/index.html
@@ -161,7 +161,6 @@
     </div>
   </div>
 </div>
-<hr>
 <!-- ////////////////////////////////////////////-->
 <!-- END HOME GENERAL-->
 <!-- ////////////////////////////////////////////-->
@@ -169,16 +168,27 @@
 <!-- ////////////////////////////////////////////-->
 <!-- FOOTER-->
 <!-- ////////////////////////////////////////////-->
-<hr>
-===> Code du footer à insérer ici. !!Faire attention à l'indentation!!
-<hr>
+<footer class="social-footer">
+  <div class="social-footer-left">
+    <a href="#"><img class="logo" src="http://placehold.it/150x30"></a>
+  </div>
+  <div class="social-footer-icons">
+    <ul class="menu simple">
+      <li><a href="https://www.facebook.com/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+      <li><a href="https://www.instagram.com/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+      <li><a href="https://www.pinterest.com/"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>
+      <li><a href="https://twitter.com/?lang=en"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+    </ul>
+  </div>
+</footer>
+
 <!-- ////////////////////////////////////////////-->
 <!-- END FOOTER-->
 <!-- ////////////////////////////////////////////-->
 
 <!-- ////////////////////////////////////////////-->
 <!-- COOKIE-->
-<!-- ////////////////////////////////////////////-->
+<!-- ////////////////////////////////////////////
 <div class="holder">
   <div class="cookie-info">
     <i class="fa fa-info"></i>
@@ -190,7 +200,7 @@
     </span>
   </div>
 </div>
-<!-- ////////////////////////////////////////////-->
+////////////////////////////////////////////-->
 <!-- END COOKIE-->
 <!-- ////////////////////////////////////////////-->
 
