ajouts éléments signin/register

--- a/register.html
+++ b/register.html
@@ -131,6 +131,7 @@
         </div>
 
         <button class="button expanded">Sign Up</button>
+        <a href="#">Already have an account ?</a>
       </div>
       </div>
 
