--- a/signin.html
+++ b/signin.html
@@ -107,7 +107,9 @@
         <input type="text" class="sign-in-form-username" id="sign-in-form-username">
         <label for="sign-in-form-password">Password</label>
         <input type="text" class="sign-in-form-password" id="sign-in-form-password">
+        <input type="checkbox" name="" value=""> Remember me
         <button type="submit" class="sign-in-form-button">Sign In</button>
+        <a href="#">Forgot your password ?</a>
       </div>
     </form>
   </div>
