Changement footer et suppression des modals dans signin et register

--- a/index.html
+++ b/index.html
@@ -30,24 +30,8 @@
       </div>
       <div class="top-bar-right">
         <ul class="menu">
-          <li><a class="logSign" data-open="exampleModal1"><span class="signin"><i class="fa fa-sign-in" aria-hidden="true"></i></span><span class="hide-for-small-only">Signin</span></a></li>
-          <div class="reveal" id="exampleModal1" data-reveal>
-            <h1>Awesome. I Have It.</h1>
-            <p class="lead">Your couch. It is mine.</p>
-            <p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
-            <button class="close-button" data-close aria-label="Close modal" type="button">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <li><a class="register" data-open="exampleModal2"><span>Register</span></a></li>
-          <div class="reveal" id="exampleModal2" data-reveal>
-            <h1>Awesome. I Have It.</h1>
-            <p class="lead">Your couch. It is mine.</p>
-            <p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
-            <button class="close-button" data-close aria-label="Close modal" type="button">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
+          <li><a class="logSign"><span class="signin"><i class="fa fa-sign-in" aria-hidden="true"></i></span><span class="hide-for-small-only">Signin</span></a></li>
+          <li><a class="register"><span>Register</span></a></li>
         </ul>
       </div>
     </div>
@@ -169,16 +153,22 @@
 <!-- FOOTER-->
 <!-- ////////////////////////////////////////////-->
 <footer class="social-footer">
-  <div class="social-footer-left">
-    <a href="#"><img class="logo" src="http://placehold.it/150x30"></a>
-  </div>
-  <div class="social-footer-icons">
-    <ul class="menu simple">
-      <li><a href="https://www.facebook.com/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-      <li><a href="https://www.instagram.com/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-      <li><a href="https://www.pinterest.com/"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>
-      <li><a href="https://twitter.com/?lang=en"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-    </ul>
+  <div class="row">
+    <div class="small-2 column">
+      <div class="social-footer-left">
+        <a href="#"><img class="logo" src="http://placehold.it/150x30"></a>
+      </div>
+    </div>
+    <div class="small-2 column">
+      <div class="social-footer-icons">
+        <ul class="menu simple">
+          <li><a href="https://www.facebook.com/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.instagram.com/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.pinterest.com/"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>
+          <li><a href="https://twitter.com/?lang=en"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+        </ul>
+      </div>
+    </div>
   </div>
 </footer>
 
