--- a/register.html
+++ b/register.html
@@ -30,24 +30,8 @@
       </div>
       <div class="top-bar-right">
         <ul class="menu">
-          <li><a class="logSign" data-open="exampleModal1"><span class="signin"><i class="fa fa-sign-in" aria-hidden="true"></i></span><span class="hide-for-small-only">Signin</span></a></li>
-          <div class="reveal" id="exampleModal1" data-reveal>
-            <h1>Awesome. I Have It.</h1>
-            <p class="lead">Your couch. It is mine.</p>
-            <p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
-            <button class="close-button" data-close aria-label="Close modal" type="button">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <li><a class="register" data-open="exampleModal2"><span>Register</span></a></li>
-          <div class="reveal" id="exampleModal2" data-reveal>
-            <h1>Awesome. I Have It.</h1>
-            <p class="lead">Your couch. It is mine.</p>
-            <p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
-            <button class="close-button" data-close aria-label="Close modal" type="button">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
+          <li><a class="logSign"><span class="signin"><i class="fa fa-sign-in" aria-hidden="true"></i></span><span class="hide-for-small-only">Signin</span></a></li>
+          <li><a class="register"><span>Register</span></a></li>
         </ul>
       </div>
     </div>
