--- a/index.html
+++ b/index.html
@@ -85,12 +85,9 @@
 <div class="row small-collapse">
   <div class="small-8 columns cardL">
     <div class="card">
-      <div class="card-divider">
-        Titre de la section Match
-      </div>
-      <div class="card-section">
+      <div class="card-section" id="plain">
         <div class="row collapse">
-          <div class="medium-3 columns">
+          <div class="medium-2 columns">
             <ul class="tabs vertical" id="example-vert-tabs" data-tabs>
               <li class="tabs-title is-active"><a href="#panel1v" aria-selected="true">13/04/2017</a></li>
               <li class="tabs-title"><a href="#panel2v">14/04/2017</a></li>
@@ -100,11 +97,56 @@
               <li class="tabs-title"><a href="#panel6v">18/04/2017</a></li>
             </ul>
           </div>
-          <div class="medium-9 columns">
+          <div class="medium-10 columns">
             <div class="tabs-content vertical" data-tabs-content="example-vert-tabs">
               <div class="tabs-panel is-active" id="panel1v">
                     <ul id="lightSlider" id="autoWidth" class="cs-hidden">
-                      <li class="item-a">Ici la description du match 1 de la journée du 13 avec image, description et toutes les infos relatives au match</li>
+                      <li class="item-a">
+                        <div class="row collapse">
+                          <div class="small-12 column">
+                            <div class="row collapse hpMatch">
+                              <div class="small-3 column">
+                                <p><img src="http://placehold.it/30x30" alt="" />Voir</p>
+                                <p><i class="fa fa-clock-o" aria-hidden="true"></i>21:00 Europe/Paris</p>
+                              </div>
+                              <div class="small-2 column">
+                                Roger Rabite
+                              </div>
+                              <div class="small-2 column">
+                                TEST
+                              </div>
+                              <div class="small-2 column">
+                                TEST
+                              </div>
+                              <div class="small-3 column">
+                                TEST
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="row collapse hpMatch">
+                          <div class="small-12 column">
+                            <div class="row collapse">
+                              <div class="small-3 column">
+                                <p><img src="http://placehold.it/30x30" alt="" />Voir</p>
+                                <p><i class="fa fa-clock-o" aria-hidden="true"></i>21:00 Europe/Paris</p>
+                              </div>
+                              <div class="small-2 column">
+                                Roger Rabite
+                              </div>
+                              <div class="small-2 column">
+                                TEST
+                              </div>
+                              <div class="small-2 column">
+                                TEST
+                              </div>
+                              <div class="small-3 column">
+                                TEST
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </li>
                       <li class="item-b">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </li>
                       <li class="item-c">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </li>
                       <li class="item-d">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </li>
@@ -153,23 +195,30 @@
 <!-- FOOTER-->
 <!-- ////////////////////////////////////////////-->
 <footer class="social-footer">
-  <div class="row">
-    <div class="small-2 column">
       <div class="social-footer-left">
         <a href="#"><img class="logo" src="http://placehold.it/150x30"></a>
-      </div>
-    </div>
-    <div class="small-2 column">
-      <div class="social-footer-icons">
+
         <ul class="menu simple">
-          <li><a href="https://www.facebook.com/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-          <li><a href="https://www.instagram.com/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-          <li><a href="https://www.pinterest.com/"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>
-          <li><a href="https://twitter.com/?lang=en"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.facebook.com/">A propos</a></li>
+        </ul>
+        <ul class="menu simple">
+          <li><a href="https://www.facebook.com/">CGU</a></li>
+        </ul>
+        <ul class="menu simple">
+          <li><a href="https://www.facebook.com/">Contact</a></li>
         </ul>
       </div>
-    </div>
-  </div>
+      <div class="social-footer-icons">
+        <ul class="menu simple footer-icons">
+          <li><a href="https://www.facebook.com/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+          <li><a href="https://twitter.com/?lang=en"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+        </ul>
+        <ul class="menu simple">
+          <li><a href="https://www.facebook.com/">Copyright : 2017 (c) Inside.gg</a></li>
+        </ul>
+
+
+      </div>
 </footer>
 
 <!-- ////////////////////////////////////////////-->
