changement mineur classe joueur

--- a/joueur.html
+++ b/joueur.html
@@ -117,7 +117,7 @@
         </div>
       </div>
       <div class="hero-search-filter-logo">
-        <div class="test2">
+        <div class="avatar-info">
           <div class="profile-left">
             <div class="cover cover-left">
               25 ans
@@ -126,7 +126,7 @@
               01/04/47 2022252222
             </div>
           </div>
-          <div class="test2-profile">
+          <div>
             <img src="http://placehold.it/150x150" alt="" />
           </div>
           <div class="profile-right">
