Changement footer et ajout lightSlider

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <div class="small-8 columns cardL">
     <div class="card">
       <div class="card-section" id="plain">
-        <ul class="tabs poil" data-tabs id="game-resume">
+        <ul class="tabs" data-tabs id="game-resume">
           <li class="tabs-title is-active"><a href="#panel1" aria-selected="true">Tab 1</a></li>
           <li class="tabs-title"><a href="#panel2">Tab 2</a></li>
           <li class="tabs-title"><a href="#panel3">Tab 3</a></li>
@@ -218,6 +218,8 @@
 <!-- FOOTER-->
 <!-- ////////////////////////////////////////////-->
 <footer class="social-footer">
+  <div class="row">
+    <div class="small-12 column">
       <div class="social-footer-left">
         <a href="#"><img class="logo" src="http://placehold.it/150x30"></a>
 
@@ -239,9 +241,12 @@
         <ul class="menu simple">
           <li><a href="https://www.facebook.com/">Copyright : 2017 (c) Inside.gg</a></li>
         </ul>
-
-
       </div>
+    </div>
+
+  </div>
+
+
 </footer>
 
 <!-- ////////////////////////////////////////////-->
